name edit + edit header + add file

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <body>
   <header>
     <h1>Il mio Viaggio a Londra</h1>
-    <img src="./img/pexels-bill-emrich-230794-0.jpg" title="Sky line di Londra" alt="Sky line di Londra 1">
-    <img src="./img/pexels-bill-emrich-230794-1.jpg" title="Sky line di Londra" alt="Sky line di Londra 2">
-    <img src="./img/pexels-bill-emrich-230794-2.jpg" title="Sky line di Londra" alt="Sky line di Londra 3">
+    <!--Gruppo immagini Header-->
+    <div>
+      <img src="./img/pexels-bill-emrich-230794-0.jpg" title="Sky line di Londra" alt="Sky line di Londra 1">
+      <img src="./img/pexels-bill-emrich-230794-1.jpg" title="Sky line di Londra" alt="Sky line di Londra 2">
+      <img src="./img/pexels-bill-emrich-230794-2.jpg" title="Sky line di Londra" alt="Sky line di Londra 3">
+    </div>
 
     <hr>
   </header>
@@ -96,6 +99,7 @@
 
   <footer>
 
+    <!--Gruppo immagini footer-->
     <div>
       <h3>Le foto</h3>
       <a href="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
