--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </header>
 
   <main>
-
     <section> <!--Prima sezione-->
+      <h2>Le mie spese</h2>
       <table>
         <thead>
           <tr>
